# OpenARK

./: Cargo.toml
dash/openapi/: Cargo.toml
dash/openapi/src/: image.rs
dash/pipe/connectors/webcam/: Cargo.toml
dash/pipe/connectors/webcam/src/: main.rs
dash/pipe/provider/src/: message.rs
