[package]
name = "dash-pipe-connector-webcam"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash-openapi = { path = "../../../openapi", features = ["clap"] }
dash-pipe-provider = { path = "../../provider" }

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
image = { workspace = true, features = ["jpeg"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
v4l = { workspace = true }
